--- a/src/app/list-products/list-products.component.html
+++ b/src/app/list-products/list-products.component.html
@@ -12,7 +12,7 @@
                     <td>Image du produit</td>
                 </tr>
                 <ng-container *ngFor="let p1 of p.products">
-                    <tr>
+                    <tr class="lineTable">
                         <td>{{p1.id}}</td>
                         <td>{{p1.name}}</td>
                         <td>{{p1.price}} €</td>
