--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,6 @@
-<div id="menu_principal" class="row">
-	<div class="col">
-		<div ngbDropdown class="d-inline-block">
-			<button type="button" class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle>
-				Menu Principal
-			</button>
-			<div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-				<button ngbDropdownItem routerLink="list_products">Liste des produits</button>
-				<button ngbDropdownItem routerLink="payment_cart">Page du paiement</button>
-			</div>
-		</div>
-	</div>
-
+<div id="menu_principal" class="row" *ngIf="router.url === '/list_products'">
+    <button type="button" class="btn btn-primary" routerLink="payment_cart">Voir le panier</button>
 </div>
-
 
 <app-list-products *ngIf="router.url === '/list_products'"></app-list-products>
 <app-payment-cart *ngIf="router.url === '/payment_cart'"></app-payment-cart>
