--- a/src/app/list-products/list-products.component.html
+++ b/src/app/list-products/list-products.component.html
@@ -11,7 +11,7 @@
                     <td>Prix HT</td>
                     <td>Taux de TVA</td>
                     <td>Image du produit</td>
-                    <td>Panier</td>
+                    <td>Ajouter au panier</td>
                 </tr>
                 <ng-container *ngFor="let p1 of p.products">
                     <tr class="lineTable">
