--- a/src/app/payment-cart/payment-cart.component.html
+++ b/src/app/payment-cart/payment-cart.component.html
@@ -10,6 +10,11 @@
         <td>Prix TTC</td>
         <td>Quantités</td>
     </tr>
+    <!-- <ng-container *ngFor="let p1 of p.products">
+        <tr class="lineTable">
+            
+        </tr>
+    </ng-container> -->
 </table>
 <div id="payButton">
     <button type="button" class="btn btn-danger" (click)="pay()" routerLink="list_products">Payer</button>
